# akonadi-client-example

./: CMakeLists.txt  README.md  akonadical.cpp  akonadical.h  example.cpp  example.h  example.ui  main.cpp
